--- a/examples/form-structure/package.json
+++ b/examples/form-structure/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@lhci/cli": "^0.14.0",
@@ -61,8 +62,9 @@
     "@vitejs/plugin-react": "^4.2.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8.55.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "24.0.0",
     "msw": "^2.0.12",
