--- a/examples/multistep-form/package.json
+++ b/examples/multistep-form/package.json
@@ -62,11 +62,13 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "^14.2.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/eslint-plugin": "^1.1.7",
     "concurrently": "^8.2.2",
-    "eslint": "^8.55.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.11.0",
     "jsdom": "25.0.1",
     "msw": "^2.0.12",
     "pptr-testing-library": "^0.8.0",
