--- a/examples/react-query/package.json
+++ b/examples/react-query/package.json
@@ -18,8 +18,8 @@
     "prebuild": "rm -rf dist",
     "test": "vitest --exclude './src/__tests__/e2e/**'",
     "test:e2e": "concurrently --kill-others --success first \"npm start\" \"vitest './src/__tests__/e2e/integration.e2e.test.jsx'\"",
-    "lint": "eslint src",
-    "lint:fix": "eslint --fix src",
+    "lint": "eslint 'src/**/*.{js,jsx}'",
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx}'",
     "format": "prettier --write src --config ./.prettierrc",
     "serve": "vite preview",
     "lhci:mobile": "lhci autorun",
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@lhci/cli": "^0.14.0",
@@ -52,6 +53,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
