--- a/templates/react-javascript/package.json
+++ b/templates/react-javascript/package.json
@@ -1,8 +1,8 @@
 {
   "version": "0.11.1",
   "dependencies": {
-    "@nmfs-radfish/radfish": "0.x",
-    "@nmfs-radfish/react-radfish": "0.x",
+    "@nmfs-radfish/radfish": "^1.0.0",
+    "@nmfs-radfish/react-radfish": "^1.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@trussworks/react-uswds": "^9.0.0",
     "react": "^18.2.0",
