--- a/examples/form-structure/package.json
+++ b/examples/form-structure/package.json
@@ -2,8 +2,8 @@
   "name": "form-structure-example",
   "version": "0.11.0",
   "dependencies": {
-    "@nmfs-radfish/radfish": "0.x",
-    "@nmfs-radfish/react-radfish": "0.x",
+    "@nmfs-radfish/radfish": "^1.0.0",
+    "@nmfs-radfish/react-radfish": "^1.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@trussworks/react-uswds": "^9.1.0",
     "react": "^18.2.0",
