--- a/examples/mock-api/package.json
+++ b/examples/mock-api/package.json
@@ -3,8 +3,8 @@
   "version": "0.8.0",
   "private": true,
   "dependencies": {
-    "@nmfs-radfish/radfish": "0.x",
-    "@nmfs-radfish/react-radfish": "0.x",
+    "@nmfs-radfish/radfish": "^1.0.0",
+    "@nmfs-radfish/react-radfish": "^1.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@trussworks/react-uswds": "^9.1.0",
     "react": "^18.2.0",
