--- a/examples/on-device-storage/package.json
+++ b/examples/on-device-storage/package.json
@@ -1,10 +1,10 @@
 {
   "name": "on-device-storage-example",
-  "version": "0.8.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@nmfs-radfish/radfish": "0.x",
-    "@nmfs-radfish/react-radfish": "0.x",
+    "@nmfs-radfish/radfish": "^1.0.0-rc.1",
+    "@nmfs-radfish/react-radfish": "^1.0.0-rc.2",
     "@testing-library/user-event": "^14.5.2",
     "@trussworks/react-uswds": "^9.1.0",
     "react": "^18.2.0",
