--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "description": "![test and build workflow](https://github.com/NMFS-RADFish/boilerplate/actions/workflows/run-tests.yml/badge.svg)",
   "workspaces": [
-    "./packages/radfish",
-    "./packages/react-radfish"
+    "packages/radfish",
+    "packages/react-radfish"
   ],
   "keywords": [],
   "author": "",
