--- a/packages/radfish/package.json
+++ b/packages/radfish/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@nmfs-radfish/radfish",
   "version": "1.1.1",
+  "type": "module",
+  "exports": {
+    ".": "./index.js",
+    "./storage": "./storage/index.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "jest"
