--- a/packages/radfish/package.json
+++ b/packages/radfish/package.json
@@ -8,23 +8,22 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
-    "dexie": "4.0.x",
-    "msw": "^2.3.1",
-    "react": "^18.3.1"
+    "dexie": "4.0.x"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.8",
-    "@babel/preset-env": "^7.26.8",
-    "@babel/preset-typescript": "^7.26.0",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "@vitest/ui": "^1.6.0",
+    "jsdom": "^24.0.0",
+    "vitest": "^1.6.0"
   }
 }
