feat: add latest tags for packages in publishing workflows
- Add [package-name]@latest tags that get updated with each new version
- Force push latest tags to always point to the most recent release
- Provides a stable reference for the current version of each package

--- a/.github/workflows/publish-radfish.yml
+++ b/.github/workflows/publish-radfish.yml
@@ -104,13 +104,15 @@ jobs:
           git add packages/radfish/package.json
           git commit -m "chore(release): bump @nmfs-radfish/radfish to ${{ steps.bump-version.outputs.new_version }}"
           
-      - name: Create and push tag
+      - name: Create and push tags
         if: success()
         run: |
           set -e
           git tag "radfish@${{ steps.bump-version.outputs.new_version }}"
+          git tag -f "radfish@latest"
           git push origin main
           git push origin "radfish@${{ steps.bump-version.outputs.new_version }}"
+          git push origin "radfish@latest" --force
           
       - name: Create GitHub Release
         if: success()
