fix: implement proper tag logic for prerelease vs stable releases
- For prereleases: only create/update beta tag
- For stable releases: only create/update latest tag
- Prevents latest tag from being updated by prereleases
- Allows beta tag to become stale between prerelease cycles

--- a/.github/workflows/publish-react-radfish.yml
+++ b/.github/workflows/publish-react-radfish.yml
@@ -115,10 +115,16 @@ jobs:
         run: |
           set -e
           git tag "react-radfish@${{ steps.bump-version.outputs.new_version }}"
-          git tag -f "react-radfish@latest"
           git push origin main
-          git push origin "react-radfish@${{ steps.bump-version.outputs.new_version }}"
-          git push origin "react-radfish@latest" --force
+          if [[ "${{ inputs.prerelease }}" == "true" ]]; then
+            # For prereleases, only tag and push beta
+            git tag -f "react-radfish@beta"
+            git push origin "react-radfish@${{ steps.bump-version.outputs.new_version }}" "react-radfish@beta" --force
+          else
+            # For regular releases, only tag and push latest
+            git tag -f "react-radfish@latest"
+            git push origin "react-radfish@${{ steps.bump-version.outputs.new_version }}" "react-radfish@latest" --force
+          fi
           
       - name: Create GitHub Release
         if: success()
