--- a/.github/workflows/publish-radfish.yml
+++ b/.github/workflows/publish-radfish.yml
@@ -109,10 +109,16 @@ jobs:
         run: |
           set -e
           git tag "radfish@${{ steps.bump-version.outputs.new_version }}"
-          git tag -f "radfish@latest"
           git push origin main
-          git push origin "radfish@${{ steps.bump-version.outputs.new_version }}"
-          git push origin "radfish@latest" --force
+          if [[ "${{ inputs.prerelease }}" == "true" ]]; then
+            # For prereleases, only tag and push beta
+            git tag -f "radfish@beta"
+            git push origin "radfish@${{ steps.bump-version.outputs.new_version }}" "radfish@beta" --force
+          else
+            # For regular releases, only tag and push latest
+            git tag -f "radfish@latest"
+            git push origin "radfish@${{ steps.bump-version.outputs.new_version }}" "radfish@latest" --force
+          fi
           
       - name: Create GitHub Release
         if: success()
