chore: add npm tag support for prerelease vs stable releases
- For prereleases: npm publish --tag beta
- For stable releases: npm publish (defaults to latest tag)
- Ensures npm registry tags match git tag behavior

--- a/.github/workflows/publish-radfish.yml
+++ b/.github/workflows/publish-radfish.yml
@@ -92,7 +92,11 @@ jobs:
         id: npm-publish
         run: |
           set -e
-          npm publish
+          if [[ "${{ inputs.prerelease }}" == "true" ]]; then
+            npm publish --tag beta
+          else
+            npm publish
+          fi
         working-directory: packages/radfish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
