--- a/.github/workflows/publish-react-radfish.yml
+++ b/.github/workflows/publish-react-radfish.yml
@@ -98,7 +98,11 @@ jobs:
         id: npm-publish
         run: |
           set -e
-          npm publish
+          if [[ "${{ inputs.prerelease }}" == "true" ]]; then
+            npm publish --tag beta
+          else
+            npm publish
+          fi
         working-directory: packages/react-radfish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
