fix: checkout current branch instead of hardcoded main
- Update workflows to use github.ref instead of hardcoded main branch
- Change step name from 'Checkout main branch' to 'Checkout repository'
- Ensures workflows run against the current branch's code and dependencies
- Fixes Jest vs Vitest test runner issue when running from feature branches

--- a/.github/workflows/publish-radfish.yml
+++ b/.github/workflows/publish-radfish.yml
@@ -39,10 +39,10 @@ jobs:
               core.setFailed(`User ${context.actor} does not have admin permissions. Current permission: ${permission}`);
             }
             
-      - name: Checkout main branch
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: ${{ github.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Configure Git
