chore: add --legacy-peer-deps flag to version bump steps
- Add --legacy-peer-deps to npm version commands in both workflows
- Resolves peer dependency conflicts when bumping prerelease versions
- Allows using standard ^1.0.0 peer dependency format

--- a/.github/workflows/publish-react-radfish.yml
+++ b/.github/workflows/publish-react-radfish.yml
@@ -84,7 +84,7 @@ jobs:
         id: bump-version
         run: |
           set -e
-          NEW_VERSION=$(npm version ${{ steps.version-type.outputs.version_command }} ${{ steps.version-type.outputs.version_args }} --no-git-tag-version)
+          NEW_VERSION=$(npm version ${{ steps.version-type.outputs.version_command }} ${{ steps.version-type.outputs.version_args }} --no-git-tag-version --legacy-peer-deps)
           echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
         working-directory: packages/react-radfish
         
