fix: use jq to parse version from package.json instead of npm output
- npm version command outputs multiline content that breaks GitHub Actions
- Now run npm version to update package.json, then use jq to get clean version
- Eliminates multiline output issues and removes 'v' prefix automatically
- Results in clean version strings like '1.1.2-rc.3' instead of 'v1.1.2-rc.3\n...'
- Fixes 'Unable to process file command output successfully' error

--- a/.github/workflows/publish-radfish.yml
+++ b/.github/workflows/publish-radfish.yml
@@ -68,7 +68,10 @@ jobs:
         id: bump-version
         run: |
           set -e
-          NEW_VERSION=$(npm version ${{ inputs.version_type }} --preid=rc --no-git-tag-version --legacy-peer-deps)
+          # Bump version (ignore output)
+          npm version ${{ inputs.version_type }} --preid=rc --no-git-tag-version --legacy-peer-deps
+          # Query the updated package.json for clean version
+          NEW_VERSION=$(jq -r '.version' package.json)
           echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
         working-directory: packages/radfish
         
