fix: push to current branch instead of hardcoded main
- Workflows were failing when run on feature branches because they tried to push to 'main'
- Changed 'git push origin main' to 'git push origin HEAD' to push current branch
- Now workflows work correctly on any branch, including feature branches for testing

--- a/.github/workflows/publish-react-radfish.yml
+++ b/.github/workflows/publish-react-radfish.yml
@@ -106,7 +106,7 @@ jobs:
         run: |
           set -e
           git tag "react-radfish@${{ steps.bump-version.outputs.new_version }}"
-          git push origin main
+          git push origin HEAD
           if [[ "${{ steps.bump-version.outputs.new_version }}" == *"-rc."* ]]; then
             # For prereleases, only tag and push beta
             git tag -f "react-radfish@beta"
