--- a/.github/workflows/publish-radfish.yml
+++ b/.github/workflows/publish-radfish.yml
@@ -100,7 +100,7 @@ jobs:
         run: |
           set -e
           git tag "radfish@${{ steps.bump-version.outputs.new_version }}"
-          git push origin main
+          git push origin HEAD
           if [[ "${{ steps.bump-version.outputs.new_version }}" == *"-rc."* ]]; then
             # For prereleases, only tag and push beta
             git tag -f "radfish@beta"
