--- a/packages/radfish/package.json
+++ b/packages/radfish/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nmfs-radfish/radfish",
-  "version": "1.1.1",
+  "version": "1.1.2-rc.0",
   "type": "module",
   "exports": {
     ".": "./index.js",
