--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,11 +31,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Install workspace dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
         working-directory: .
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
         working-directory: templates/react-javascript
 
       - name: Build project
