--- a/examples/persisted-form/package.json
+++ b/examples/persisted-form/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@nmfs-radfish/radfish": "^1.0.0-rc.1",
-    "@nmfs-radfish/react-radfish": "^1.0.0-rc.2",
+    "@nmfs-radfish/radfish": "^1.1.1",
+    "@nmfs-radfish/react-radfish": "^1.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@trussworks/react-uswds": "^9.1.0",
     "react": "^18.2.0",
