--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: "18"
 
       - name: Install workspace dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
         working-directory: .
 
   lighthouse:
