--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: "20"
 
       - name: Install workspace dependencies
         run: npm install
@@ -35,7 +35,7 @@ jobs:
         working-directory: .
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: npm install
         working-directory: templates/react-javascript
 
       - name: Build project
