--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -36,8 +36,12 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "16.0.0",
+    "@trussworks/react-uswds": "^9.0.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "focus-trap-react": "^10.3.1",
     "jsdom": "25.0.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "vite-plugin-css-injected-by-js": "^3.5.1",
     "vitest": "2.1.2"
