--- a/templates/react-javascript/package.json
+++ b/templates/react-javascript/package.json
@@ -1,5 +1,6 @@
 {
   "version": "0.11.1",
+  "type": "module",
   "dependencies": {
     "@nmfs-radfish/radfish": "^1.1.0",
     "@nmfs-radfish/react-radfish": "^1.0.0",
