--- a/templates/react-javascript/package.json
+++ b/templates/react-javascript/package.json
@@ -60,6 +60,7 @@
     "@lhci/cli": "^0.14.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@uswds/uswds": "^3.13.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
     "eslint-config-react-app": "^7.0.1",
@@ -69,6 +70,7 @@
     "jsdom": "24.1.3",
     "msw": "^2.6.5",
     "prettier": "^3.1.0",
+    "sass": "^1.97.2",
     "vite": "^5.1.5",
     "vite-plugin-pwa": "0.21.0",
     "vitest": "2.1.2"
