--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "boilerplate",
   "description": "![test and build workflow](https://github.com/NMFS-RADFish/boilerplate/actions/workflows/run-tests.yml/badge.svg)",
   "workspaces": [
     "packages/radfish",
