--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -26,18 +26,21 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.16.0",
-    "@trussworks/react-uswds": "^9.0.0"
+    "@trussworks/react-uswds": "^10.2.0"
   },
   "peerDependencies": {
     "@nmfs-radfish/radfish": "^1.1.0",
-    "react": "^18.2.0"
+    "react": "^18.2.0 || ^19.2.1"
   },
   "devDependencies": {
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "16.0.0",
+    "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "focus-trap-react": "^10.0.0",
     "jsdom": "25.0.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "vite-plugin-css-injected-by-js": "^3.5.1",
     "vitest": "2.1.2"
   }
