--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -25,12 +25,12 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.16.0",
+    "@tanstack/react-table": "^8.21.0",
     "@trussworks/react-uswds": "^10.2.0"
   },
   "peerDependencies": {
     "@nmfs-radfish/radfish": "^1.1.0",
-    "react": "^18.2.0 || ^19.2.1"
+    "react": "^19.2.1"
   },
   "devDependencies": {
     "@testing-library/dom": "10.4.0",
