--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -34,8 +34,18 @@ jobs:
         run: npm install
         working-directory: .
 
-      - name: Install dependencies
-        run: npm install
+      - name: Build workspace packages
+        run: npm run build --workspaces --if-present
+        working-directory: .
+
+      - name: Link local packages globally
+        run: npm link --workspaces
+        working-directory: .
+
+      - name: Install template dependencies with local packages
+        run: |
+          npm install
+          npm link @nmfs-radfish/radfish @nmfs-radfish/react-radfish
         working-directory: templates/react-javascript
 
       - name: Build project
