--- a/templates/react-javascript/package.json
+++ b/templates/react-javascript/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.23.3",
     "@lhci/cli": "^0.14.0",
+    "@nmfs-radfish/vite-plugin-radfish-theme": "^0.1.0-rc.1",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "^16.3.0",
     "@uswds/uswds": "^3.13.0",
