--- a/packages/react-radfish/package.json
+++ b/packages/react-radfish/package.json
@@ -38,6 +38,7 @@
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "focus-trap-react": "^10.0.0",
+    "prop-types": "^15.8.1",
     "jsdom": "25.0.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
